# Trace-Finder

./: CMakeLists.txt  README.md
src/: .CMakeLists.txt.swp  main.cpp  rbtree.hpp
src/graph/: .CMakeLists.txt.swp  CMakeLists.txt
src/graph/dtrace/: CMakeLists.txt  embedded_trace.cpp  embedded_trace.hpp  find.cpp  find.hpp  rule.cpp  rule.hpp  trace.cpp  trace.hpp  tree.cpp  tree.hpp
src/graph/morphism/: canonicalize.hpp  vf2.hpp
src/graph/parse/: .CMakeLists.txt.swp
